--- a/flaskr/templates/blog/article.html
+++ b/flaskr/templates/blog/article.html
@@ -3,6 +3,19 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block content %}
+<style>
+.card-header h2 {
+    color: #343a40;
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.card-body p {
+    font-size: 16px;
+    line-height: 1.6;
+}
+</style>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8">
