--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -218,3 +218,13 @@ select {
 .mb-4 {
     margin-bottom: 1.5rem;
 }
+
+.btn-primary:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+}
+
+.card-footer {
+        background-color: #f8f9fa;
+        border-top: none;
+}
