--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -1,7 +1,7 @@
 <!-- templates/blog/index.html -->
 {% extends 'base.html' %}
 
-{% block title %}Articles{% endblock %}
+{% block title %}Latest Articles{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
@@ -15,6 +15,12 @@
                     <h2>{{ post.title }}</h2>
                     <p class="card-text">{{ post.summary }}</p>
                     <a href="{{ url_for('blog.article', article_id=post.id) }}" class="btn btn-primary">Read More</a>
+                    {% if g.user and g.user['id'] == post.author_id %}
+                    <a href="{{ url_for('blog.update', id=post.id) }}" class="btn btn-secondary">Edit</a>
+                    <form action="{{ url_for('blog.delete', id=post.id) }}" method="post" style="display: inline;">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                    {% endif %}
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{ post.created }} by {{ post.username }}
